[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/InitialScene.gd" type="Script" id=4]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 1 )

[node name="InitialScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -458.666
margin_top = -425.407
margin_right = 1461.34
margin_bottom = 854.593
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CualquierTeclaColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -361.0
margin_top = 630.0
margin_right = 355.0
margin_bottom = 688.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -450.0
margin_right = 447.0
margin_bottom = 379.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -440.0
margin_top = 20.0
margin_right = 440.0
margin_bottom = 714.0
custom_constants/separation = 270
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 880.0
margin_bottom = 341.0
custom_constants/separation = 25

[node name="GameTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "INUNDADOS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameDescription" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 880.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 2 )
text = "Bienvenido a Inundados, el juego donde tenés que arreglar la ciudad para que no se inunde."
align = 1
valign = 1
autowrap = true

[node name="MenuUsage" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 880.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 3 )
text = "Utilizá los números del teclado o el mouse para navegar por el menú."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CualquierTeclaLabel" type="Label" parent="VBoxContainer"]
margin_top = 611.0
margin_right = 880.0
margin_bottom = 661.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Pulsá cualquier tecla para continuar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="gui_input" from="VBoxContainer/CualquierTeclaLabel" to="." method="_on_CualquierTeclaLabel_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/CualquierTeclaLabel" to="." method="_on_CualquierTeclaLabel_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/CualquierTeclaLabel" to="." method="_on_CualquierTeclaLabel_mouse_exited"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
